@@ -5,8 +5,7 @@ DIST=feisty
 # cleanup
 echo "Cleaning up"
 rm -f *~ *.bak *.pyc *.moved '#'* *.rej *.orig
-sudo rm -rf backports/ profile/ result/ tarball/ *.deb
-
+#sudo rm -rf backports/ profile/ result/ tarball/ *.deb
 
 # update po
 (cd ../po; make update-po)
@@ -20,6 +19,6 @@ if [ ! -h $DIST ]; then
 fi
 
 # create the tarball, copy links in place 
-tar -c -h -z -v --exclude=$DIST.tar.gz --exclude=$0 -f $DIST.tar.gz .
+tar -c -h -z -v --exclude=$DIST.tar.gz --exclude=$0 -X build-exclude.txt -f $DIST.tar.gz  .
 
 
