@@ -1,4 +1,14 @@
 # demoted packages
+edgy-community-wallpapers
+edgy-gdm-themes
+edgy-session-splashes
+edgy-wallpapers
+gray-theme
+industrialtango-theme
+legacyhuman-theme
 libdigest-hmac-perl
 netkit-inetd
+outdoors-theme
+resilience-theme
+silicon-theme
 smake
