@@ -1,3 +1,10 @@
+2007-01-29:
+	- fixes in the InstallProgress.error() method
+	- DistUpgrade/DistUpgradeView.py: fix InstallProgress refactoring
+	- updated obsoletes
+	- auto-generate the codename for the upgrade based on the build-system coden (lp: #77620)
+	- various bugfixes
+	- apport support
 2006-12-12:
 	- rewrote the _checkFreeSpace() and add better checking 
           for /boot (#70683)
